Add: register new source,  authentication
