# src/internal/transaction/ports/openapi_types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package ports
 
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
+
 // Error defines model for Error.
 type Error struct {
 	// Code Error code indicating the type of error.
